# claw-workspace-manager

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_openclaw_workspace_type.py  0003_native_runtime_support.py
backend/app/: __init__.py  config.py  constants.py  db.py  dependencies.py  main.py  models.py  schema_compat.py  schemas.py  security.py
backend/app/api/: auth.py  runtime.py  users.py  workspace_serializers.py  workspaces.py
backend/app/services/: auth.py  config_nanobot.py  config_openclaw.py  config_renderer.py  config_shared.py  gateway.py  openclaw_runtime.py  runtime_control.py  workspace.py  workspace_artifacts.py  workspace_dashboard.py  workspace_profiles.py
backend/tests/: conftest.py  test_auth_users.py  test_config_renderer.py  test_gateway.py  test_install_native.py  test_openclaw.py  test_schema_compat.py  test_settings.py  test_workspaces.py
deploy/: .env.example  docker-compose.yml  install-native.sh
deploy/sudoers/: claw-workspace-manager
deploy/systemd/: README.md  claw-manager.service  claw-nanobot@.service  claw-openclaw.service
deploy/templates/base-workspace/: README.md
deploy/templates/openclaw-workspace/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  router.ts  types.ts
frontend/src/api/: auth.ts  client.ts  index.ts  users.ts  workspaces.ts
frontend/src/components/: AppShell.vue
frontend/src/stores/: auth.ts
(+20 files in other folders)
